# cosyvoice3-axera-russian

./: .gitignore  README.md  README_RU.md  README_ZH.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/runner/: CV2_Tokenizer.hpp  LLM.hpp  Token2wav.hpp
cpp/src/runner/utils/: sampling.hpp
docs/: BENCHMARKS.md  RUSSIAN_VOICE.md  SETUP.md  TROUBLESHOOTING.md
dual_npu/: benchmark_rkllm.py  benchmark_rkllm_modes.py  cosyvoice3-rkllm.service  cosyvoice3-t2w.service  generate_test_samples.sh  install_services.sh  launch_dual_npu.sh  llama_cpp_bindings.py  llama_wrapper.c  llamacpp_token_server.py  onnx_hift_server.py  rkllm_token_server.py  test_hift_onnx_cpu.py  test_stability.sh  tts_client.py
examples/: prompt_text_russian.txt
scripts/: generate_prompt.sh  postprocess.py  run_tts.sh  tokenizer_server.py
